--- a/style.css
+++ b/style.css
@@ -16,9 +16,12 @@
   list-style-type: none;
 }
 
+/* Header style */
+
 .buscador__header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin: 32px 115px;
 }
 
@@ -32,6 +35,7 @@
   background-image: url(img/lupa.png);
   background-position: calc(393px - 40px);
   background-repeat: no-repeat;
+  outline: none;
 }
 .boton__login {
   width: 182px;
@@ -68,6 +72,9 @@
   color: #fff;
   font-size: 1rem;
 }
+
+/* Main style */
+
 main {
   padding: 64px 115px;
 }
@@ -104,7 +111,6 @@ main {
 
 .imagenes {
   display: flex;
-  flex-wrap: nowrap;
   gap: 16px;
 }
 .box__starWars,
@@ -114,6 +120,8 @@ main {
   flex-direction: column;
   gap: 8px;
 }
+
+/* Footer style */
 
 .contacto {
   display: flex;
@@ -169,8 +177,109 @@ form > textarea {
 
 .rodapie {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 102px;
+  gap: 8px;
+  font-size: 1rem;
+  font-weight: 500;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+.rodapie img {
+  width: 40px;
+}
+.rodapie img:hover {
+  transform: scale(0.95);
+}
+
+/* Responsive design */
+/* Tablet max-width 768px */
+
+@media (max-width: 768px) {
+  .buscador__header {
+    margin: 16px;
+  }
+
+  .input__header {
+    width: 272px;
+  }
+  .boton__login {
+    width: 166px;
+    height: 40px;
+  }
+
+  .bg__header {
+    background-image: url(img/Hero.png);
+    height: 352px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 16px;
+    padding-top: 161px;
+    gap: 16px;
+  }
+
+  .boton__consolas {
+    width: 118px;
+    height: 40px;
+  }
+
+  /* Main style */
+
+  main {
+    padding: 32px 16px;
+  }
+  .starWars,
+  .consolas,
+  .diversos {
+    width: 740px;
+  }
+  .title__container {
+    width: 704px;
+  }
+  .imagenes {
+    gap: 6px;
+  }
+
+  .title__starWars,
+  .title__consolas,
+  .title__diversos {
+    font-size: 1.375rem;
+  }
+  .box__starWars:nth-child(5),
+  .box__starWars:nth-child(6),
+  .box__consolas:nth-child(5),
+  .box__consolas:nth-child(6),
+  .box__diversos:nth-child(5),
+  .box__diversos:nth-child(6) {
+    display: none;
+  }
+
+  /* Footer style */
+
+  .contacto {
+    gap: 16px;
+    padding: 32px 16px;
+    position: relative;
+  }
+  .logo__contacto {
+    position: absolute;
+    top: 32px;
+    left: 32px;
+  }
+
+  .links {
+    padding-top: 66px;
+    padding-bottom: 32px;
+    margin-right: 90px;
+  }
+
+  .formulario form {
+    width: 434px;
+    height: 229px;
+  }
+
+  .boton__contacto {
+    width: 133px;
+    height: 40px;
+  }
 }
