--- a/css/login.css
+++ b/css/login.css
@@ -38,6 +38,9 @@
   background-repeat: no-repeat;
   outline: none;
 }
+.lupa {
+  display: none;
+}
 
 /* Main style */
 
@@ -136,4 +139,124 @@ form > textarea {
 }
 .rodapie img:hover {
   transform: scale(0.95);
+}
+
+/* Responsive design */
+/* Tablet max-width 768px */
+
+@media (max-width: 768px) {
+  .buscador__header {
+    margin: 16px;
+  }
+
+  .input__header {
+    width: 272px;
+    background-position: calc(272px - 40px);
+  }
+
+  main {
+    height: 295px;
+  }
+  main form {
+    gap: 16px;
+    align-items: center;
+  }
+  form > input {
+    width: 275px;
+    height: 41px;
+  }
+  .entrar {
+    width: 109px;
+    height: 40px;
+  }
+
+  .contacto {
+    gap: 16px;
+    padding: 32px 16px;
+    position: relative;
+  }
+  .logo__contacto {
+    position: absolute;
+    top: 32px;
+    left: 16px;
+  }
+
+  .links {
+    padding-top: 66px;
+    padding-bottom: 32px;
+    margin-right: 90px;
+  }
+
+  .formulario form {
+    width: 434px;
+    height: 229px;
+  }
+  form > input {
+    width: 434px;
+  }
+  form > textarea {
+    width: 434px;
+  }
+
+  .boton__contacto {
+    width: 133px;
+    height: 40px;
+  }
+}
+
+/* Responsive design */
+/* Mobile max-width 360px */
+
+@media (max-width: 360px) {
+  .buscador__header {
+    justify-content: space-between;
+  }
+  .input__header {
+    display: none;
+  }
+  .logo__header {
+    width: 100px;
+  }
+  .lupa {
+    display: flex;
+  }
+
+  main {
+    height: 295px;
+  }
+
+  .contacto {
+    flex-direction: column;
+    height: 556px;
+    align-items: center;
+    padding: 16px;
+  }
+  .logo__contacto {
+    position: static;
+  }
+
+  .links {
+    padding-top: 66px;
+    padding: 0 16px;
+    margin: 0;
+    text-align: center;
+  }
+  .links > li {
+    padding-bottom: 16px;
+  }
+
+  .formulario form {
+    width: 328px;
+    height: 229px;
+    padding: 8px 0;
+  }
+  form > input,
+  form > textarea {
+    width: 331px;
+  }
+
+  .boton__contacto {
+    width: 133px;
+    height: 40px;
+  }
 }
