se da interaccion a boton ver consolas y se completa form de contacto en el index.html para luego integrar js

--- a/css/login.css
+++ b/css/login.css
@@ -61,6 +61,9 @@ main form {
 form > input {
   width: 423px;
   height: 63px;
+  padding-left: 12px;
+  outline: none;
+  border-radius: 4px;
 }
 .entrar {
   height: 62px;
