se valida formulario inicio de sesion para usuarios registrados y autorizados en sesion.js y se aplican estilos correspondientes

--- a/css/style.css
+++ b/css/style.css
@@ -194,9 +194,11 @@ form > textarea {
 .error {
   color: var(--color-error);
   margin-bottom: 12px;
+  padding: 0 16px;
 }
 #enviado {
   color: var(--color-enviado);
+  padding: 0 16px;
 }
 
 .rodapie {
