--- a/css/login.css
+++ b/css/login.css
@@ -5,6 +5,8 @@
   --color-bgInput: #e5e5e5;
   --color-titleProductos: #464646;
   --color-bg-footer: #eaf2fd;
+  --color-error: rgb(221, 81, 81);
+  --color-enviado: rgb(57, 194, 57);
 }
 
 * {
@@ -52,6 +54,11 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.inicio {
+  font-weight: 700;
+  font-size: 1.125rem;
+  margin-bottom: 25px;
 }
 main form {
   display: flex;
@@ -119,6 +126,8 @@ form > textarea {
   width: 560px;
   height: 82px;
   margin-bottom: 8px;
+  padding-left: 12px;
+  padding-top: 12px;
 }
 .boton__contacto {
   width: 144px;
@@ -127,6 +136,23 @@ form > textarea {
   border: none;
   color: #fff;
   font-size: 1rem;
+  margin-bottom: 12px;
+}
+.error {
+  color: var(--color-error);
+  margin-bottom: 12px;
+  padding: 0 16px;
+  max-width: 560px;
+}
+#enviado {
+  color: var(--color-enviado);
+  padding: 0 16px;
+}
+#usuarioInvalido {
+  color: var(--color-error);
+  margin-bottom: 12px;
+  padding: 0 16px;
+  max-width: 560px;
 }
 
 .rodapie {
@@ -160,7 +186,7 @@ form > textarea {
   }
 
   main {
-    height: 295px;
+    height: 395px;
   }
   main form {
     gap: 16px;
@@ -227,7 +253,7 @@ form > textarea {
   }
 
   main {
-    height: 295px;
+    height: 395px;
   }
 
   .contacto {
