--- a/css/productos.css
+++ b/css/productos.css
@@ -69,9 +69,11 @@ main {
   height: 51px;
   background-color: var(--color-bgBtn);
   border: none;
+  margin-bottom: 16px;
+}
+.agregar button a {
   color: #fff;
   font-size: 1rem;
-  margin-bottom: 16px;
 }
 
 .precio {
