se agregan imagenes y se agregan dinamicamente a home y gestion de productos pages

--- a/css/productos.css
+++ b/css/productos.css
@@ -91,6 +91,10 @@ main {
   flex-direction: column;
   gap: 8px;
 }
+.box__producto .foto {
+  width: 176px;
+  height: 174px;
+}
 .eliminar {
   position: absolute;
   width: 24px;
