se agrega logica para eliminar productos cliqueando imagen trash sobre la misma imagen del producto desde productos.js

--- a/css/productos.css
+++ b/css/productos.css
@@ -101,6 +101,10 @@ main {
   top: 8px;
   right: 48px;
 }
+.eliminar:hover,
+.editar:hover {
+  cursor: pointer;
+}
 .editar {
   position: absolute;
   width: 24px;
